# adventofcode2017

./: advent23.c  adventofcode2017.cabal  run.sh  stack.yaml
app/: Advent25.hs  Main.hs  Solve01.hs  Solve02.hs  Solve03.hs  Solve04.hs  Solve05.hs  Solve06.hs
data/: input07.txt  input15.txt
src/: Advent01.hs  Advent02.hs  Advent03.hs  Advent04.hs  Advent05.hs  Advent06.hs  Advent07.hs  Advent08.hs  Advent09.hs  Advent1.hs  Advent10.hs  Advent11.hs  Advent12.hs  Advent13.hs  Advent14.hs  Advent15.hs  Advent16.hs  Advent17.hs  Advent18.hs  Advent19.hs  Advent2.hs  Advent20.hs  Advent21.hs  Advent22.hs  Advent23.hs  Advent24.hs  Advent25.hs  Advent3.hs  Advent4.hs  Advent5.hs  Advent6.hs  Advent7.hs  Advent8.hs  Advent9.hs  Lib.hs
test/: Spec.hs
