name:                adventofcode2017
version:             0.1.0.0
synopsis:            Solutions for the Advent of Code 2017
homepage:            https://github.com/henriknordin/adventofcode2017#readme
license:             BSD3
license-file:        LICENSE
author:              Henrik Nordin
maintainer:          nordhenr@gmail.com
copyright:           2017 Henrik Nordin
category:            Web
build-type:          Simple
data-files:          data/*.txt
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/henriknordin/adventofcode2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Advent01
                     , Advent02
                     , Advent03
                     , Advent4
                     , Advent5
                     , Advent6
                     , Advent7
                     , Advent8
                     , Advent9
                     , Advent10
                     , Advent11
                     , Advent12
                     , Advent13
                     , Advent14
                     , Advent15
                     , Advent16
                     , Advent17
                     , Advent18
                     , Advent19
                     , Advent20
                     , Advent21
                     , Advent22
                     , Advent23
                     , Advent24
                     , Advent25
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.8
                     , split
                     , matrix
  default-language:    Haskell2010

executable adventofcode2017-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , adventofcode2017
  default-language:    Haskell2010

executable solve01-exe
  hs-source-dirs:      app
  main-is:             Solve01.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode2017
  default-language:    Haskell2010

executable solve02-exe
  hs-source-dirs:      app
  main-is:             Solve02.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode2017
  default-language:    Haskell2010

executable solve03-exe
  hs-source-dirs:      app
  main-is:             Solve03.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode2017
  default-language:    Haskell2010

executable advent25-exe
  hs-source-dirs:      app
  main-is:             Advent25.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , adventofcode2017
  default-language:    Haskell2010

test-suite adventofcode2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode2017
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode2017
